# benchmark

./: .gitignore  CMakeLists.txt  GlobalCompilerConfig.cmake  InstallBoost.cmake  InstallGooglebenchmark.cmake  InstallNlohmannjson.cmake  InstallRapidjson.cmake  InstallSimdjson.cmake  LICENSE  Makefile  README.md
any_vs_inheritance/: CMakeLists.txt  benchmark.cc
chrono_vs_gettimeofday_or_clockgettime/: CMakeLists.txt  benchmark.cc
json_parsers/: CMakeLists.txt  benchmark.cc  test.json
lock_vs_rwlock/: CMakeLists.txt  benchmark.cc
shared_vs_unique_ptr/: CMakeLists.txt  benchmark.cc
std_function_vs_virtual_function/: CMakeLists.txt  benchmark.cc
string_vs_sstream_in_concat/: CMakeLists.txt  benchmark.cc
unordered_vs_ordered_map/: CMakeLists.txt  benchmark.cc
virtual_vs_non_virtual/: CMakeLists.txt  benchmark.cc
